# DantaroWalletPro

./: .gitignore  AI_DEVELOPER_GUIDE.md  DATABASE_ERD.md  DATABASE_SCHEMA_ANALYSIS.md  DETAILED_TESTING_CHECKLIST.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_LOG.md  DEVELOPMENT_PROGRESS_REPORT.md  DOC26_PROGRESS_REPORT.md  DantaroWalletPro.code-workspace  INTEGRATED_DEVELOPMENT_PLAN.md  MAINTENANCE_GUIDE.md  QUICK_START_GUIDE.md  README.md  SUPERADMIN_FINAL_CHECK.md  api-test.html  capture_browser_request.js  check_browser_errors.sh  collect_errors.sh  create_test_user.sh  dev-manager.sh  diagnose.sh  fix_root_problem.sh  monitor.sh  quick-start.sh  quick_browser_check.sh  quick_fix.sh  quick_server.sh  report_issue.sh  start_server.sh  test.db
dantarowallet/: .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  API_ENDPOINTS.md  API_ENDPOINTS_SUMMARY.md  Dockerfile  FRONTEND_QUICK_START.md  Makefile  PROGRESS.md  SERVICE_IMPLEMENTATION_PLAN.md  add_test_partner.py  check_frontend_backend_connection.sh  check_tronlink_status.py  create_tables.py  dashboard_server.py  database_analyzer.py  db_analyzer.py  dev.db.backup  docker-compose.prod.yml  docker-compose.yml  final_tronlink_status.py  init.sh  monitor_api_requests.sh  monitor_realtime.sh  nginx.conf  pyproject.toml  run.py  run_server.py  simple_api_server.py  simple_server.py  start_backend.sh  test_admin_apis.py  test_audit_api.py  test_audit_compliance_system.py  test_audit_simple.py  test_complete_energy_rental.py  test_energy_rental_complete.py  test_energy_rental_functions.py  test_energy_rental_service.py  (+5 more)
dantarowallet/.github/workflows/: backend-quality.yml
dantarowallet/alembic/: env.py  env_backup.py  env_simple.py
dantarowallet/alembic/versions/: 2b6ff5b2e63f_phase_3_새_시스템_모델_추가.py  4badefa63d4b_add_deposit_table.py  4c2b2dfd8953_add_withdrawal_table.py  4e8a059dac47_add_wallet_table.py  6df3c98916b7_update_energy_pool_for_doc24_fixed.py  7a5993b11637_initial_migration_with_users_and_.py  93b2e4126195_add_collection_address_to_hd_wallet_.py  ca0829d8a731_merge_sweep_and_doc27_heads.py  doc25_001_add_doc25_energy_monitoring_models.py  doc26_001_partner_fee_policies.py  doc27_001_sweep_automation.py  doc27_002_fix_partner_id_foreign_keys.py  doc29_001_add_partner_onboarding_models.py  doc30_001_add_audit_compliance_models.py  e78898c0e488_add_transaction_analytics_tables.py  eb77262afa97_add_deposit_table_v2.py  energy_pool_001_add_energy_pool_tables.py  ext_energy_001_add_external_energy_tables.py  sweep_001_add_sweep_hd_wallet_tables.py  (+4 more)
dantarowallet/app/: __init__.py  main.py
dantarowallet/archive/: cookies.txt
dantarowallet/cleanup_temp/: api_test_result.json  check_db_status.py  check_hd_wallet_schema.py  check_partner_wallets.py  create_test_partner.py  distribute_trx_test.py  energy_monitoring_service_backup.py  energy_monitoring_service_fixed.py  energy_monitoring_service_fixed_old.py  energy_monitoring_service_new.py  get_test_partner_info.py  get_trx_guide.sh  test_api_server.py  test_master_wallet.py  update_master_wallet.py  update_partner_wallet.py  update_wallet_address.py
dantarowallet/database_schema/: database_analysis.json
dantarowallet/scripts/: __init__.py  create_integrated_sample_data.py  create_price_history.py  create_sample_data.py  create_simple_sample_data.py  create_superadmin.py  daily_log.py  deploy.sh  dev_ready.sh  generate_api_docs_by_role.py  init_db.py  init_energytron_data.py  init_external_energy_data.py  init_partner_energy.py  make_admin.py  pre_commit_check.py  refactoring_monitor.py  refactoring_scheduler.py  setup_energy_pool.py  test_api_response.py  test_external_energy_apis.py  update_api_docs.sh
dantarowallet/templates/: dashboard.html  tronlink.html
dantarowallet/tests/: __init__.py  conftest.py  test_admin.py  test_app.py  test_audit_final.py  test_auth.py  test_balance.py  test_dashboard.py  test_database.py  test_health.py  test_onboarding.py  test_onboarding_doc29.py  test_transaction_analytics.py  test_wallet.py
(+1136 files in other folders)
